--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="index.html" target="_blank">Home</a>
         <a href="about.html">About</a>
         <a>Products</a>
-        <a>Blog</a>
+        <a href="blog.html" target="_blank">Blog</a>
         <a>Contact</a>
     </nav>
   </header> 
@@ -95,7 +95,7 @@
           <a href="index.html" target="_blank">Home</a>
           <a href="about.html">About</a>
           <a href="#">Products</a>
-          <a href="#">Blog</a>
+          <a href="blog.html" target="_blank">Blog</a>
           <a href="#">Contact</a>
         </nav>
       </footer>
