--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="index.html">Home</a>
             <a href="about.html" target="_blank">About</a>
             <a>Products</a>
-            <a>Blog</a>
+            <a href="blog.html" target="_blank">Blog</a>
             <a>Contact</a>
         </nav>
     </header>
@@ -79,7 +79,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html" target="_blank">About</a>
                 <a href="#">Products</a>
-                <a href="#">Blog</a>
+                <a href="blog.html" target="_blank">Blog</a>
                 <a href="#">Contact</a>
             </nav>
         </footer>
