--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,7 @@
         <div class = "blogInner">
             <hr>
             <h2>Why Blog With Us</h2>
+            <img class = "innerBlogImg" src="https://images.unsplash.com/photo-1491975474562-1f4e30bc9468?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Expedita aspernatur eius eligendi necessitatibus delectus hic, 
             recusandae error tenetur ratione minima repudiandae dignissimos 
@@ -51,6 +52,7 @@
         <div class = "blogInner">
             <hr>
             <h2>Who Blogs With Us</h2>
+            <img class = "innerBlogImg" src="https://images.unsplash.com/photo-1537511446984-935f663eb1f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Expedita aspernatur eius eligendi necessitatibus delectus hic, 
             recusandae error tenetur ratione minima repudiandae dignissimos 
@@ -62,6 +64,7 @@
      
     <div id = "blogRules">
         <h2>Blog Rules</h2>
+        <img src="https://images.unsplash.com/photo-1495001258031-d1b407bc1776?ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" >
         <ol>
             <li>Rules Rules Rules Rules Rules...</li>
             <li>Rules Rules Rules Rules Rules...</li>
